# spralingua_v2

./: .gitignore  README.md  main.py  pipecat_test.py  pyproject.toml
agents/: __init__.py  agents.py  conversation.py  dynamic_prompts.py  load_prompts.py  pipecat_wrapper.py  prompts.yaml
config/: __init__.py  settings.py
logs/: __init__.py  session_logger.py
logs/conversations/: .gitkeep
pipeline/: __init__.py  converters.py  factory.py
services/: __init__.py  stt.py  transport.py  tts.py
ui/: __init__.py  gradio.py
