[project]
name = "voice-agent-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "pipecat-ai[deepgram,silero]>=0.0.98",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
]
